tests/baselines/reference/grammarAmbiguities1.errors.txt
==== tests/cases/compiler/grammarAmbiguities1.ts (8 errors) ====
    class A { foo() { } }
    class B { bar() { }}
    function f(x) { return x; }
    function g<T, U>(x) { return f(x); }
    g<A, B>(7)
    
    f(g<A, B>(7));
    f(g < A, B > 7);
    ~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~
!!! error TS2087: Could not select overload for 'call' expression.
      ~~~~~
!!! error TS2009: Operator '<' cannot be applied to types 'typeof g' and 'typeof A'.
             ~~~~~
!!! error TS2009: Operator '>' cannot be applied to types 'typeof B' and 'number'.
    f(g < A, B > +(7));
    ~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~
!!! error TS2087: Could not select overload for 'call' expression.
      ~~~~~
!!! error TS2009: Operator '<' cannot be applied to types 'typeof g' and 'typeof A'.
             ~~~~~~~~
!!! error TS2009: Operator '>' cannot be applied to types 'typeof B' and 'number'.
    